<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poker timer</string>
       
    
    <!-- MAIN MENU STRINGS -->
    
    <string name="search">Search</string>
    <string name="add_game">Add game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <!-- SETTINGS STRINGS -->
    <string name="sound_on_for_1_minute_warning">Warn 1 minute before round ends</string>
    <string name="warning_sound">Notification sound</string>
    <string name="vibrations">Enable vibrations</string>
    <string name="notifications">Enable notifications</string>
    <string name="use_lockscreen">Use lockscreen widget</string>
    <string name="never_off_the_screen">Never turn off the screen</string>
        
	<!-- ADD_GAME STRINGS -->
	<string name="add_game_title">Add new game</string>
	
	<string name="enter_gamename">Name of the game</string>
	<string name="enter_rounds_number">Number of rounds</string>
	<string name="enter_roundlength">Time per round (in seconds)</string>
	
	<string name="next">Next</string>
	<string name="modify_rounds">Modify rounds</string>
	
	<string name="delete">Delete</string>
	
	<string name="delete_rounds">Delete rounds</string>
	<string name="add_round">Add round</string>
	
	<string name="select_all">Select all</string>
	<string name="deselect_all">Deselect all</string>
	
	
	<!-- Edit round -->
	<string name="small_blind">Small blind</string>
	<string name="big_blind">Big blind</string>
	<string name="ante">Ante</string>
	<string name="duration">Duration</string>
	<string name="minutes">Minutes</string>
	<string name="seconds">Seconds</string>
	<string name="set_this_round_as_break">Set this round as break</string>

	<!-- Edit Game -->
	<string name="edit_game">Edit game</string>
	
	<!-- NOTIFICATIONS -->
	<string name="round">round</string>
	
	
	<!-- ABOUT_APP STRINGS -->
	<string name="about_header">App version: 1.0\nProgrammed by Aleš Kajzar and Ondřej Komárek, two indenpendent developers from Czech republic.\nIf you enjoy using this app you can support further development by donating us.
	</string>

	<string name="about_email_us">If you know about any bug or you think that you have great improvement idea for us, you can send e-mail at: 
	</string>
		   
	<string name="about_email">ondrej.komarek.cz@gmail.com
	</string>
	
	<!-- validation -->
	<string name="empty">This field cannot be empty.</string>
	<string name="too_long">Name must be shorter than 25 characters. You have</string>
   
	<string name="warning">Warning</string>
	<string name="no_round_warning">You didn\'t set any rounds!</string>
	
</resources>
