<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
 <item android:id="@+id/menu_ok"
          android:icon="@drawable/my_tick"
          android:title="@string/ok"
          android:showAsAction="always" />
    
  <item android:id="@+id/menu_add"
          android:icon="@drawable/my_cross"
          android:title="@string/add_round"
          android:showAsAction="always" />
  
   <item android:id="@+id/menu_delete"
          android:icon="@drawable/my_bin"
          android:title="@string/delete_rounds" 
          android:showAsAction="always"/>
   
   <item android:id="@+id/menu_select_all"
          android:icon="@drawable/my_bin"
          android:title="@string/select_all" 
          android:showAsAction="never"
          android:visible="false"
          />
   
   <item android:id="@+id/menu_deselect_all"
          android:title="@string/deselect_all" 
          android:showAsAction="never"
          android:visible="false"
          />
</menu>