<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

       
	    <TextView 
	    android:id="@+id/game_name_text"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/enter_gamename" />
	    
	    <EditText
	    android:id="@+id/game_name_edit"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:hint="@string/enter_gamename"
	    android:imeActionLabel="@string/next"
	    android:inputType="text" />
	    <!-- 
	    <TextView 
	    android:id="@+id/game_rounds_text"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/enter_rounds_number" />
	    
	    <EditText
	    android:id="@+id/game_rounds_edit"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:hint="@string/enter_rounds_number"
	    android:imeActionLabel="@string/next"
	    android:inputType="number" />
	    
	    <TextView 
	    android:id="@+id/default_roundlength_text"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/enter_roundlength" />
	    
	    <EditText
	    android:id="@+id/default_roundlength_edit"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:hint="@string/enter_roundlength"
	    android:imeActionLabel="@string/next"
	    android:inputType="number" />
	    
    -->
    
    <Button
        android:id="@+id/modify_rounds"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_rounds"
          />

</LinearLayout>
