<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/about_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_header" 
        android:textSize="16sp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">
       
    </TextView>


        <ImageButton
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:src="@drawable/donate"
            android:background="@null"
            android:onClick="onClick" />
        
         
        <TextView
            android:id="@+id/about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/about_header"
            android:layout_marginTop="102dp"
            android:text="@string/about_email_us"
            android:textSize="16sp"
            
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp" />
         <TextView
            android:id="@+id/about_click_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/about_email"
            android:text="@string/about_email"
            android:textSize="16sp"
            
            android:paddingLeft="10dp"

            android:paddingRight="10dp"
 />

</RelativeLayout>
